src/istio/common/manifests/peer-authentication.yaml
# Copyright 2024 Defense Unicorns
# SPDX-License-Identifier: AGPL-3.0-or-later OR LicenseRef-Defense-Unicorns-Commercial
---
# Source: istio/templates/bigbang/peerAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-istio-system
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
