src/istio/common/manifests/pepr-istio-config.yaml
# Have to pre-create the namespace and also patch it with the istio ambient label later because
# Helm is kind of dumb: https://github.com/helm/helm/issues/350
kind: Namespace
apiVersion: v1
metadata:
  name: pepr-system
  labels:
    istio-injection: disabled
    istio.io/dataplane-mode: ambient
